# cookiecutter-pypackage

./: .buildinfo  .editorconfig  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  appveyor.yml  console_script_setup.html  cookiecutter.json  docker-compose.yml  genindex.html  index.html  invoke.html  mkdocs.yml  objects.inv  prompts.html  py-modindex.html  pypi_release_checklist.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  travis_pypi_setup.html  troubleshooting.html  tutorial.html
.devcontainer/: devcontainer.json  docker-compose.yml
.doctrees/: console_script_setup.doctree  environment.pickle  index.doctree  invoke.doctree  prompts.doctree  pypi_release_checklist.doctree  readme.doctree  travis_pypi_setup.doctree  troubleshooting.doctree  tutorial.doctree
.github/workflows/: deploy-docs.yml  test.yml
_modules/: index.html  tasks.html
docs/: CONTRIBUTING.md  console_script_setup.md  invoke.md  prompts.md  prompts.rst  pypi_release_checklist.md  travis_pypi_setup.md  troubleshooting.md  tutorial.md
hooks/: post_gen_project.py
tests/: conftest.py  test_bake_project.py
{{cookiecutter.github_repository_name}}/: .bumpversion.cfg  .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tasks.py
{{cookiecutter.github_repository_name}}/docs/: CONTRIBUTING.md
{{cookiecutter.project_slug}}/: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
(+21 files in other folders)
