[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[flake8]
exclude = docs
# @see https://github.com/psf/black/blob/master/README.md#line-length
max-line-length = 88
extend-ignore = E203
statistics = True
show_source = True

[radon]
cc_min = B
show_complexity = True
show_mi = True
